Montage configuration work